--- a/cmd/capture/ui/index.html
+++ b/cmd/capture/ui/index.html
@@ -92,6 +92,39 @@
         background: rgba(255,255,255,0.65);
         overflow: hidden;
       }
+      .drawer-backdrop {
+        position: fixed;
+        inset: 0;
+        background: rgba(15,23,42,0.18);
+        backdrop-filter: blur(6px);
+        display: none;
+        align-items: flex-end;
+        justify-content: center;
+        padding: 24px;
+        z-index: 50;
+      }
+      .drawer-backdrop.visible { display: flex; }
+      .drawer {
+        width: min(980px, 100%);
+        border-radius: 28px;
+        background: var(--surface);
+        border: 1px solid var(--border);
+        box-shadow: 0 40px 80px rgba(16,23,36,0.18);
+        padding: 20px 20px;
+        max-height: 70vh;
+        overflow: auto;
+      }
+      .drawer h3 { margin: 0; font-size: 1.2rem; letter-spacing: -0.02em; }
+      .drawer pre {
+        margin-top: 14px;
+        padding: 14px;
+        border-radius: 18px;
+        background: rgba(255,255,255,0.6);
+        border: 1px solid rgba(15,23,42,0.08);
+        overflow: auto;
+        white-space: pre-wrap;
+        word-break: break-word;
+      }
       table { width: 100%; border-collapse: collapse; }
       th, td { padding: 10px 12px; border-bottom: 1px solid rgba(15,23,42,0.06); vertical-align: top; }
       th { text-transform: uppercase; letter-spacing: 0.18em; font-size: 0.75rem; color: var(--muted); font-weight: 650; background: rgba(255,255,255,0.35); }
@@ -208,6 +241,19 @@
             <ul id="eventList" class="events" style="margin-top:14px;"></ul>
           </div>
         </div>
+      </div>
+    </div>
+    <div id="drawerBackdrop" class="drawer-backdrop" role="dialog" aria-modal="true" aria-label="Log details">
+      <div class="drawer">
+        <div class="row" style="margin-top:0; justify-content:space-between;">
+          <h3 id="drawerTitle">Log details</h3>
+          <div class="row" style="margin-top:0;">
+            <button id="copyLine" class="btn">Copy</button>
+            <button id="closeDrawer" class="btn">Close</button>
+          </div>
+        </div>
+        <div class="subtitle" id="drawerMeta" style="margin-top:10px;"></div>
+        <pre id="drawerBody"></pre>
       </div>
     </div>
     <script>
@@ -332,6 +378,11 @@
         for (const l of (lines || [])) {
           const tr = document.createElement("tr");
           tr.dataset.key = l.key;
+          tr.dataset.ts_ns = l.ts_ns;
+          tr.dataset.namespace = l.namespace || "";
+          tr.dataset.pod = l.pod || "";
+          tr.dataset.container = l.container || "";
+          tr.dataset.message = l.message || "";
           const ts = document.createElement("td");
           ts.className = "ts";
           ts.textContent = fmtNS(l.ts_ns);
@@ -613,6 +664,48 @@
       });
       el("loadPrev").addEventListener("click", async () => {
         await loadPrevLogs();
+      });
+
+      function openDrawerFromRow(tr) {
+        if (!tr) return;
+        el("drawerTitle").textContent = "Log details";
+        const meta = [];
+        const ns = tr.dataset.namespace;
+        const pod = tr.dataset.pod;
+        const container = tr.dataset.container;
+        const ts = Number(tr.dataset.ts_ns || "0") || 0;
+        if (ns) meta.push(`ns/${ns}`);
+        if (pod) meta.push(pod);
+        if (container) meta.push(container);
+        if (ts) meta.push(fmtNS(ts));
+        el("drawerMeta").textContent = meta.join(" · ");
+        el("drawerBody").textContent = tr.dataset.message || "";
+        el("drawerBackdrop").classList.add("visible");
+      }
+
+      el("logBody").addEventListener("click", (ev) => {
+        const tr = ev.target.closest("tr");
+        openDrawerFromRow(tr);
+      });
+      el("closeDrawer").addEventListener("click", () => {
+        el("drawerBackdrop").classList.remove("visible");
+      });
+      el("drawerBackdrop").addEventListener("click", (ev) => {
+        if (ev.target === el("drawerBackdrop")) el("drawerBackdrop").classList.remove("visible");
+      });
+      el("copyLine").addEventListener("click", async () => {
+        const text = el("drawerBody").textContent || "";
+        try {
+          await navigator.clipboard.writeText(text);
+          el("copyLine").textContent = "Copied";
+          setTimeout(() => { el("copyLine").textContent = "Copy"; }, 900);
+        } catch (e) {
+          el("copyLine").textContent = "Copy failed";
+          setTimeout(() => { el("copyLine").textContent = "Copy"; }, 900);
+        }
+      });
+      window.addEventListener("keydown", (ev) => {
+        if (ev.key === "Escape") el("drawerBackdrop").classList.remove("visible");
       });
       el("follow").addEventListener("click", async () => {
         state.follow = !state.follow;
